backends/k8s/cogserver-dev/yaml/cogserver-dev-deploymentt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titiler-dev
  namespace: titiler-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titiler-dev
  template:
    metadata:
      labels:
        app: titiler-dev
    spec:
      nodeSelector:
        type: "manual"
      containers:
        - name: titiler-dev
          #image: ghcr.io/undp-data/cogserver:v0.0.3
          image: undpgeohub.azurecr.io/cogserver-debug
          imagePullPolicy: Always
          resources:
            limits:
              memory: "9G"
              cpu: "2000m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 3
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: type
      #               operator: In
      #               values:
      #               - auto
