backends/k8s/cogserver-dev/yaml/cogserver-dev-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titiler-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titiler-dev
  namespace: titiler-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titiler-dev
  template:
    metadata:
      labels:
        app: titiler-dev
    spec:
      nodeSelector:
        type: "manual"
      containers:
        - name: titiler-dev
          image: ghcr.io/undp-data/cogserver:v0.0.3
          resources:
            limits:
              memory: "9G"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: titiler-dev
  namespace: titiler-dev
  labels:
    app: titiler-dev
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: titiler-dev
  type: ClusterIP # LoadBalancer # NodePort #
  ## load balancer will make the service accessible on the internet using an external ip but no https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titiler-dev-ssl-tls-ingress
  namespace: titiler-dev
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt

spec:
  tls:
    - hosts:
        - titiler-dev.undpgeohub.org # update IP address here
      secretName: titiler-dev-cert
  rules:
    - host: titiler-dev.undpgeohub.org # update IP address here
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: titiler-dev
                port:
                  number: 80
